--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+    background-color: antiquewhite;
+}
+
 h1 {
     background-color: rgba(255, 0, 0, 0.7);
     font-style: italic;
@@ -5,11 +9,19 @@ h1 {
     margin: 30px;
 }
 
-h1,
-a {
+h1 a {
     color: antiquewhite;
     text-decoration: none;
     padding: 15px;
+}
+
+button {
+    cursor: pointer;
+}
+
+img {
+    width: 130px;
+    height: 130px;
 }
 
 .contenedorFiltros {
@@ -17,6 +29,33 @@ a {
     justify-content: space-between;
     max-width: 1200px;
     margin: 0 auto;
+}
+
+#buscador {
+    width: 250px;
+    max-height: 30px;
+    border-radius: 15px;
+    background-color: rgba(255, 0, 0, 0.6);
+    -webkit-text-fill-color: antiquewhite;
+}
+
+.contenedorBotonesFiltro {
+    display: flex;
+    align-items: center;
+    width: 450px;
+    justify-content: space-around;
+}
+
+.botonFiltro {
+    font-size: 15px;
+}
+.pngCarrito {
+    cursor: pointer;
+    width: 25px;
+    height: 25px;
+}
+.oculto {
+    display: none !important;
 }
 
 .contenedorPrincipal {
@@ -47,25 +86,40 @@ a {
     margin: 2px;
     width: 200px;
     height: 300px;
-    border: 2px solid black;
+    background-color: white;
+    border: 2px solid rgba(255, 0, 0, 0.6);
     border-radius: 20px;
-    box-shadow: 4px 5px 9px black;
+    box-shadow: 2px 4px 9px rgba(255, 0, 0, 0.7);
 }
 
-.tarjetaCamiseta:hover{
-    box-shadow: 8px 10px 25px black;
+.tarjetaCamiseta:hover {
+    box-shadow: 8px 10px 25px rgba(255, 0, 0, 0.7);
     transition: 0.4s;
-    cursor: pointer;
 }
 
-.tarjetaCamiseta,
-p {
+.tarjetaCamiseta p {
     margin: 8px;
 }
 
-#buscador {
-    width: 200px;
-    max-height: 30px;
+.tarjetaCamiseta button {
+    color: #faebd7;
+    background-color: rgba(255, 0, 0, 0.7);
+    width: 160px;
+    height: 40px;
+    border-radius: 15px;
+    margin: 5px;
+}
+
+#contenedorCarrito {
+    display: flex;
+    flex-direction: column;
+    padding: 100px;
+}
+
+#headerCarrito {
+    display: flex;
+    justify-content: space-around;
+    padding: 15px;
 }
 
 #carrito {
@@ -76,54 +130,48 @@ p {
     max-width: 1200px;
     gap: 11px;
     margin: 0 auto;
-    border: 1px solid black;
-    box-shadow: 2px 3px 5px black;
 }
 
-img {
-    width: 130px;
-    height: 130px;
+.carritoVacio {
+    justify-content: center;
+    align-content: center;
+    font-size: 20px;
+    text-decoration: underline 1px black;
 }
 
 .tarjetaEnCarrito {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    padding: 20px;
+    width: 100%;
+    border: 1px solid rgba(255, 0, 0, 0.7);
     align-items: center;
-    padding: 30px;
-    width: 100px;
+    justify-content: space-around
+}
+
+.tarjetaEnCarrito img {
     border: 1px solid black;
 }
 
 #contenedorBotonComprar {
     display: flex;
     flex-direction: row-reverse;
-    border: 1px black solid;
+    align-items: center;
     padding: 10px;
     margin: 15px;
 }
 
-#contenedorCarrito {
-    display: flex;
-    flex-direction: column;
-    padding: 100px;
+
+
+
+#precioTotal {
+    margin: 20px;
 }
 
-.oculto {
-    display: none !important;
-}
-
-.pngCarrito {
-    width: 25px;
-    height: 25px;
-}
-
-.contenedorBotonesFiltro {
-    display: flex;
-    align-items: center;
-    width: 450px;
-    justify-content: space-around;
-}
-
-.botonFiltro {
-    font-size: 15px;
+#botonComprar {
+    color: antiquewhite;
+    background-color: rgba(255, 0, 0, 0.7);
+    width: 200px;
+    height: 50px;
+    border-radius: 10px;
 }
